@@ -10,7 +10,7 @@ end
 
 require 'puppetlabs_spec_helper/module_spec_helper'
 module_path = RSpec.configuration.module_path
-$LOAD_PATH.unshift File.join(module_path, 'backport_package_settings/lib')
+$LOAD_PATH.unshift File.join(module_path, 'backports/lib')
 $LOAD_PATH.unshift File.join(module_path, 'package_resource/lib')
 $LOAD_PATH.unshift File.join(module_path, 'portsutil/lib')
 $LOAD_PATH.unshift File.join(module_path, 'vash/lib')
